--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -192,8 +192,17 @@ jobs:
             fi
           done < <(printf "%s" '${{ inputs.upstream-details }}' | jq -rc 'keys[]')
 
+      - name: Install LLVM (Homebrew)
+        if: inputs.platform-pretty == 'MacOS'
+        run: |
+
       - name: Install dependencies
         run: |
+          if [[ "${{ inputs.platform-pretty }}" == "MacOS" ]]; then
+            brew update
+            brew install llvm@20
+            echo "LLVM_CMAKE_PREFIX=$(brew --prefix llvm@20)/lib/cmake" >> $GITHUB_ENV
+          fi
           # Sometimes, the location of downloaded binaries via Pip may not in the path already
           echo "~/Library/Python/${{ inputs.python-version }}/bin" >> $GITHUB_PATH
           echo "~/.local/bin" >> $GITHUB_PATH
