--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -445,6 +445,7 @@ jobs:
 
       - name: Run unit tests
         continue-on-error: ${{ inputs.continue-on-error }}
+        timeout-minutes: 240
         run: |
           # LLM environment variables (might not be needed)
           pwd && ls
