--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -397,7 +397,7 @@ jobs:
             brew install llvm@14
             
             # Set the correct LLVM config path for llvmlite
-            if [[ "${{ inputs.amalgam-plat-arch }}" == "macos-amd64" ]]; then
+            if [[ "${{ inputs.amalgam-plat-arch }}" == "darwin-amd64" ]]; then
               # For Intel Macs
               export LLVM_CONFIG=/usr/local/opt/llvm@14/bin/llvm-config
               pip install --only-binary :all: llvmlite
